Update README to include an usage example